# oguri-jingu

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
asset_extraction/: README.md  main.py  oguri_processing.py  read-config.toml
asset_extraction/models/: meta_model.py
jp_text_extraction/: config.toml  main.py
src/asset_extraction/: oguri_interface.py  oguri_processing.py  oguri_utils.py  read-config.toml
src_assets/asset_extraction/: oguri_utils.py
src_assets/asset_extraction/models/: meta_model.py
text_extraction/: README.md  config.toml  test1.py
utils/: oguri_utils.py
utils/supabase/: README.md  image_upload.py
