[tool.poetry]
name = "uma-mono"
version = "0.0.1"
description = "FOSS Toolset (+web) for Uma Musume"
authors = ["Wes Hahn <52631646+wesh92@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
black = "^23.12.1"
pre-commit = "^3.6.0"
ruff = "^0.1.11"
polars = "^0.20.3"
pydantic = "^2.5.3"
SQLAlchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.4"
ibis-framework = {extras = ["postgres", "sqlite"], version = "^7.2.0"}
toml = "^0.10.2"
lz4 = "^4.3.3"
unitypy = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
